--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,8 +21,9 @@
     cursor: pointer;
 }
 .section-heading {
-    /* max-width: 827px; */
+    max-width: 827px; 
     text-align: center;
+    margin: 0 auto;
     /* justify-content: center; */
 }
 .section-heading h2 {
@@ -49,7 +50,7 @@ header {
 }
 
 nav {
-    width: 75%;
+    width: 80%;
     max-width: 1920px;
     margin: 0 auto;
     display: flex;
@@ -141,4 +142,47 @@ nav .menu li a {
     font-size: 20px;
     color: #474747;
     line-height: 30px;
+}
+
+#skills {
+    padding-top: 130px;
+    text-align: center;
+}
+
+#skills .skill-container {
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+#skills .skill-box {
+    display: flex;
+    gap: 24px;
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.skill-box .skill-card {
+    padding: 30px 33px 30px 30px;
+    box-shadow: 0 6px 50px 0 #00000021;
+    text-align: left;
+    max-width: 267px;
+    justify-content: left;
+    margin-top: 20px;
+}
+.skill-box .skill-card img {
+    margin-bottom: 30px;
+    max-width: 44px;
+}
+
+.skill-card h3 {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    max-width: 174px;
+}
+
+.skill-card p {
+    font-size: 16px;
+    color:#757575;
+    line-height: 28px;
 }
