--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -120,6 +120,9 @@ nav .menu li a {
 #about {
     padding: 130px;
 }
+.text-center {
+    text-align: center;
+}
 #about .about-container {
     /* border: 1px solid blue; */
     padding: 131px 157px;
@@ -185,4 +188,90 @@ nav .menu li a {
     font-size: 16px;
     color:#757575;
     line-height: 28px;
+}
+
+#resume {
+    padding-top: 130px;
+}
+
+#resume .resume-container {
+    width: 71%;
+    max-width: 1140px;
+    margin: 113px auto 0;
+    display: flex;
+    gap: 20px;
+}
+.resume-container hr {
+    margin: 30px 0;
+}
+
+.resume-container .section-title {
+    color:#474747;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+
+.resume-card {
+    max-width: 511px;
+    margin-right: 47px;
+}
+
+.resume-card   .card-title {
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #474747;
+}
+
+.resume-card   .card-info {
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    color: #757575;
+}
+.resume-card   .card-text {
+    font-size: 16px;
+    line-height: 28px;
+    color: #757575;
+}
+
+footer {
+    margin-top: 130px;
+    background-color: #FFF8F3;
+    padding: 130px 0;
+}
+footer .footer-container {
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    display: flex;
+    gap: 116px;
+}
+
+.footer-container h2 {
+    color: #181818;
+    font-size: 35px;
+    margin-bottom: 20px;
+}
+.footer-container .social {
+    max-width: 562px;
+}
+
+.footer-container .social p {
+    color: #474747;
+    line-height: 28px;
+    font-size: 16px;
+    margin-bottom: 30px;
+}
+
+.footer-container .icons a {
+    margin-right: 24px;
+}
+
+.footer-container form input[type="text"], .footer-container form textarea, .footer-container form input[type="email"] {
+    width: 461px;
+    padding: 18px 31px;
+    margin-bottom: 24px;
+    border: none;
+    color: #757575;
 }
