--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -45,7 +45,7 @@ header {
     background-color: #fff8f3;
     background:  url(../images/developer.png), url(../images/header_bg.png)#fff8f3;
     background-repeat: no-repeat;
-    background-position: bottom left, bottom right;
+    background-position: 23px 31px, bottom right;
     padding-top: 50px;
 }
 
@@ -268,7 +268,7 @@ footer .footer-container {
     margin-right: 24px;
 }
 
-.footer-container form input[type="text"], .footer-container form textarea, .footer-container form input[type="email"] {
+.footer-container form input[type="text"], .footer-container form textarea, .footer-container form input[type="emailf"] {
     width: 461px;
     padding: 18px 31px;
     margin-bottom: 24px;
